# model

./: .gitignore  README.md  pyproject.toml
model/: meta.py  types.py
model/helper/: check.py  factories.py  func.py  helper.py  meta.py  types.py
model/mods/: check.py  conf.py  err.py  flags.py  func.py  init.py  meta.py  resolve.py  types.py
model/mods/meta/: model.py  schema.py
model/mods/types/: model.py  schema.py
