[project]
name = "typedsystem-model"
version = "1.0.0"
description = "The typedsystem model system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {"name" = "Yuri Ximenes", "email" = "typed@gmx.ie"},
]
dependencies = [
]

[project.optional-dependencies]
git = [
    "typed @ git+https://github.com/typedsystem/typed"
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["model*"]
